--- a/src/component/Header/nav/Nav.css
+++ b/src/component/Header/nav/Nav.css
@@ -23,6 +23,7 @@
     opacity: 0;
     visibility: hidden;
     transition: all ease-in-out 0.2s;
+    z-index: 1000 !important;
 }
 .nav .part2 ul li:hover .dropdown-opt{
     visibility: visible;
